created about me

--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap');
+body {
+    background-color: #EDE8F5;
+    font-family: 'Atma';
+}
 header {
+    background-color: #7091e6;
     text-align: center;
 }
 h1 {
     font-size: 4em;
 }
-p { 
+p {
+    font-size :2em;
+}
+h2 {
+    font-size :2em;
+}
+section { 
     padding-left: 5%; 
-    padding-right: 5%;
+    padding-right: 35%;
 }
 #image1 {
     width: 500px;
